# postpwn

./: .gitignore  Dockerfile  README.md  docker-compose.yml  future-config-example.jsonc  justfile  pyproject.toml  rules-example.jsonc  rules.json
.github/workflows/: build.yml
deployment/: deploy.sh
scripts/: setup-dotenv.sh
src/postpwn/: __init__.py  api.py  cli.py  rescheduler.py  types.py  validation.py  weighted_task.py
src/postpwn/testing/: fixtures.py  set_env.py
src/that_what_must_be_done/: __init__.py  cli.py  rescheduler.py  types.py
tests/: cli_test.py  conftest.py  rescheduler_test.py  test_rescheduler.py
tests/fixtures/: daily_max_weight_rules.json  excessive_daily_max_weight_rules.json  excessive_single_max_weight_rules.json  single_max_weight_rules.json
tests/helpers/: data_generators.py  fake_api.py
