[project]
name = "postpwn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Zasorin", email = "zasorin.alek@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "click>=8.1.8",
    "faker>=37.1.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "todoist-api-python>=3.0.1",
]

[project.scripts]
postpwn = "postpwn:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "pytest-clarity>=1.0.1",
    "pytest-spec>=4.0.0",
]

[tool.basedpyright]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = "--spec"
spec_test_format = "{result} {docstring_summary}"
log_cli = true
log_cli_level = "INFO"
